// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B2B Input Group should not render a group error if the group is invalid and disabled 1`] = `
<b2b-input-group>
  <template shadowrootmode="open">
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
    <span class="b2b-input-wrapper__hint">
      A group hint
    </span>
  </template>
  <b2b-input class="b2b-input" disabled="" type="text">
    <template shadowrootmode="open">
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper b2b-input__wrapper--disabled">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left b2b-input__native-input--disabled" disabled="" type="text">
        <slot name="end"></slot>
      </div>
    </template>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown b2b-dropdown--disabled" disabled="">
    <template shadowrootmode="open">
      <select class="b2b-dropdown__select" disabled="">
        <option>
          Select an option...
        </option>
        <option value="data-1">
          Data Set 1
        </option>
        <option value="data-2">
          Data Set 2
        </option>
      </select>
    </template>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content" disabled="">
    <template shadowrootmode="open">
      <button class="b2b-button--primary" disabled="" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </template>
    Search
  </b2b-button>
</b2b-input-group>
`;

exports[`B2B Input Group should render a group error if one is specified and the group is invalid 1`] = `
<b2b-input-group>
  <template shadowrootmode="open">
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
    <span class="b2b-input-wrapper__hint b2b-input-wrapper__hint--error">
      A group error
    </span>
  </template>
  <b2b-input class="b2b-input b2b-input--error" invalid="" type="text">
    <template shadowrootmode="open">
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left" type="text">
        <slot name="end"></slot>
      </div>
    </template>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown b2b-dropdown--error" invalid="">
    <template shadowrootmode="open">
      <select class="b2b-dropdown__select">
        <option>
          Select an option...
        </option>
        <option value="data-1">
          Data Set 1
        </option>
        <option value="data-2">
          Data Set 2
        </option>
      </select>
    </template>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content">
    <template shadowrootmode="open">
      <button class="b2b-button--primary" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </template>
    Search
  </b2b-button>
</b2b-input-group>
`;

exports[`B2B Input Group should render a group hint if it is specified 1`] = `
<b2b-input-group>
  <template shadowrootmode="open">
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
    <span class="b2b-input-wrapper__hint">
      A group hint
    </span>
  </template>
  <b2b-input class="b2b-input" type="text">
    <template shadowrootmode="open">
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left" type="text">
        <slot name="end"></slot>
      </div>
    </template>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown">
    <template shadowrootmode="open">
      <select class="b2b-dropdown__select">
        <option>
          Select an option...
        </option>
        <option value="data-1">
          Data Set 1
        </option>
        <option value="data-2">
          Data Set 2
        </option>
      </select>
    </template>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content">
    <template shadowrootmode="open">
      <button class="b2b-button--primary" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </template>
    Search
  </b2b-button>
</b2b-input-group>
`;

exports[`B2B Input Group should render content wrapped in the input group 1`] = `
<b2b-input-group>
  <template shadowrootmode="open">
    <div class="b2b-input-wrapper">
      <slot name="start"></slot>
      <slot></slot>
      <slot name="end"></slot>
    </div>
  </template>
  <b2b-input class="b2b-input" type="text">
    <template shadowrootmode="open">
      <b2b-input-label>
        <slot name="label">
          Search Term
        </slot>
      </b2b-input-label>
      <div class="b2b-input__wrapper">
        <slot name="start"></slot>
        <input class="b2b-input__native-input b2b-input__native-input--align-left" type="text">
        <slot name="end"></slot>
      </div>
    </template>
  </b2b-input>
  <b2b-dropdown class="b2b-dropdown">
    <template shadowrootmode="open">
      <select class="b2b-dropdown__select">
        <option>
          Select an option...
        </option>
        <option value="data-1">
          Data Set 1
        </option>
        <option value="data-2">
          Data Set 2
        </option>
      </select>
    </template>
  </b2b-dropdown>
  <b2b-button class="b2b-button--100 b2b-button--fit-content">
    <template shadowrootmode="open">
      <button class="b2b-button--primary" type="button">
        <span>
          <slot name="start"></slot>
          <slot></slot>
          <slot name="end"></slot>
        </span>
      </button>
    </template>
    Search
  </b2b-button>
</b2b-input-group>
`;
